--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
   <div class="app customize-off" id="appRoot">
-    <!-- Main tracker card -->
-    <div class="card">
+    <div class="tracker-view" id="trackerView">
+      <!-- Main tracker card -->
+      <div class="card">
       <header class="main-header">
         <div class="header-left">
           <div class="title-row">
@@ -64,6 +65,24 @@
           <button class="btn btn-ghost" id="customizeToggle">
             ⚙ Customize
           </button>
+          <div class="account-menu" id="accountMenu">
+            <button class="btn btn-ghost" id="accountBtn" type="button">
+              Login
+            </button>
+            <div class="account-dropdown is-hidden" id="accountDropdown">
+              <div class="account-profile">
+                <div class="account-label">Signed in as</div>
+                <div class="account-email" id="accountEmail">Guest</div>
+                <div class="account-last-sync" id="accountLastSync">Last sync: --</div>
+              </div>
+              <button class="account-item" id="accountDashboardBtn" type="button">
+                Dashboard
+              </button>
+              <button class="account-item" id="accountLogoutBtn" type="button">
+                Sign out
+              </button>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -117,6 +136,120 @@
     </div>
   </div>
 
+    <div class="dashboard-view is-hidden" id="dashboardView">
+      <div class="card">
+        <div class="dashboard-header">
+          <div>
+            <div class="title-row">
+              <h2>Dashboard</h2>
+              <span class="header-badge">Member view</span>
+            </div>
+            <p class="header-subtitle">
+              A focused overview of your habits, streaks, and the next best actions to stay consistent.
+            </p>
+          </div>
+          <div class="dashboard-actions">
+            <div class="sync-pill" id="dashboardSync">Sync: idle</div>
+            <button class="btn btn-ghost" id="dashboardGoToTracker" type="button">
+              Open tracker
+            </button>
+            <button class="btn btn-ghost" id="logoutBtn" type="button">
+              Sign out
+            </button>
+          </div>
+        </div>
+
+        <div class="dashboard-grid">
+          <div class="dashboard-card">
+            <div class="dashboard-card-title">This month</div>
+            <div class="dashboard-metric" id="dashAvg">0%</div>
+            <div class="dashboard-meta" id="dashStreak">Longest streak: 0 days</div>
+          </div>
+          <div class="dashboard-card">
+            <div class="dashboard-card-title">Tracked days</div>
+            <div class="dashboard-metric" id="dashDays">0</div>
+            <div class="dashboard-meta" id="dashPerfect">Perfect days: 0</div>
+          </div>
+          <div class="dashboard-card">
+            <div class="dashboard-card-title">Quick actions</div>
+            <div class="dashboard-actions-list">
+              <button class="btn btn-primary" id="dashboardAddActivity" type="button">
+                Add activity
+              </button>
+              <button class="btn btn-ghost" id="dashboardCompare" type="button">
+                Compare months
+              </button>
+            </div>
+          </div>
+          <div class="dashboard-card">
+            <div class="dashboard-card-title">Consistency focus</div>
+            <ul class="dashboard-list">
+              <li>Review your streaks every Sunday.</li>
+              <li>Pick one activity to push to 100% this week.</li>
+              <li>Use compare mode to spot slow months.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="dashboard-section-title">What you can do</div>
+        <div class="dashboard-feature-grid">
+          <div class="dashboard-feature">
+            <h3>Track daily progress</h3>
+            <p>Log completion levels for each habit and see daily progress bars update instantly.</p>
+          </div>
+          <div class="dashboard-feature">
+            <h3>Compare months</h3>
+            <p>See month-over-month shifts in average completion and streaks to refine your plan.</p>
+          </div>
+          <div class="dashboard-feature">
+            <h3>Customize routines</h3>
+            <p>Add or rename activity columns to match the habits you care about most.</p>
+          </div>
+          <div class="dashboard-feature">
+            <h3>Year overview</h3>
+            <p>Get a quick scan of your whole year to spot your strongest and weakest months.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div class="modal is-hidden" id="authModal" aria-hidden="true">
+    <div class="modal-backdrop" id="authBackdrop"></div>
+    <div class="modal-card" role="dialog" aria-modal="true" aria-labelledby="authTitle">
+      <div class="modal-header">
+        <div>
+          <h3 id="authTitle">Welcome back</h3>
+          <p>Sign in or create an account to access your dashboard.</p>
+        </div>
+        <button class="icon-btn" id="authCloseBtn" type="button" aria-label="Close">
+          x
+        </button>
+      </div>
+      <div class="modal-body">
+        <label>
+          Email
+          <input type="email" id="authEmail" placeholder="you@email.com">
+        </label>
+        <label>
+          Password
+          <input type="password" id="authPassword" placeholder="your password">
+        </label>
+        <div class="auth-message" id="authMessage" role="status" aria-live="polite"></div>
+        <button class="link-btn" id="authForgotBtn" type="button">
+          Forgot password?
+        </button>
+        <div class="modal-actions">
+          <button class="btn btn-primary" id="authLoginBtn" type="button">Login</button>
+          <button class="btn btn-ghost" id="authSignupBtn" type="button">Sign up</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script type="module" src="js/app.js"></script>
 
 </body>
