Simplify tracker row visuals

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <a class="skip-link" href="#trackerView">Skip to tracker content</a>
   <div class="app customize-off" id="appRoot">
     <div class="tracker-view" id="trackerView">
       <!-- Main tracker card -->
@@ -141,7 +140,7 @@
   </div>
 
     <div class="dashboard-view is-hidden" id="dashboardView">
-      <div class="card">
+      <div class="card tracker-card">
         <div class="dashboard-header">
           <div>
             <div class="title-row">
