--- a/index.html
+++ b/index.html
@@ -313,8 +313,7 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="js/app.bundle.js"></script>
+  <script type="module" src="./js/app.js"></script>
 
 </body>
 </html>
